iptables.save
# Generated by iptables-save v1.6.1 on Fri Oct 21 18:05:54 2022
*mangle
:PREROUTING ACCEPT [266057:11869016]
:INPUT ACCEPT [263210:11630566]
:FORWARD ACCEPT [2847:238450]
:OUTPUT ACCEPT [139635:6066275]
:POSTROUTING ACCEPT [1309:119084]
COMMIT
# Completed on Fri Oct 21 18:05:54 2022
# Generated by iptables-save v1.6.1 on Fri Oct 21 18:05:54 2022
*nat
:PREROUTING ACCEPT [262921:11606851]
:INPUT ACCEPT [131160:7869600]
:OUTPUT ACCEPT [2734:260247]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o enp0s8 -j MASQUERADE
COMMIT
# Completed on Fri Oct 21 18:05:54 2022
# Generated by iptables-save v1.6.1 on Fri Oct 21 18:05:54 2022
*filter
:INPUT DROP [131079:3678619]
:FORWARD DROP [675:58044]
:OUTPUT DROP [133810:5503287]
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -s 10.0.2.4/32 -d 10.0.2.5/32 -p icmp -m icmp --icmp-type 8 -j DROP
-A INPUT -s 10.0.2.4/32 -d 10.0.2.5/32 -i enp0s3 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -j LOG --log-prefix DROPPED-INGRESS-
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A FORWARD -s 10.0.2.4/32 -d 8.8.8.8/32 -p icmp -j ACCEPT
-A FORWARD -s 8.8.8.8/32 -d 10.0.2.4/32 -p icmp -j ACCEPT
-A OUTPUT -d 10.0.2.4/32 -o enp0s3 -p tcp -m tcp --sport 80 -j ACCEPT
-A OUTPUT -j LOG --log-prefix DROPPED-INGRESS-
COMMIT
# Completed on Fri Oct 21 18:05:54 2022
